tests/NormalTests/paczka1/small_fuzzy/63688166.err
Error in line 4: 7AlrzBW9Ck A689 49,3
Error in line 5: 5Pb A689 96,6
Error in line 6: 7AlrzBW9Ck A453 32,8
